tests/derive/not_entities.stderr
error[E0277]: the trait bound `shipyard::not::Not<shipyard::storage::entity::Entities>: shipyard::run::system_data::SystemData<'_>` is not satisfied
 --> $DIR/not_entities.rs:3:1
  |
3 | #[system(Test)]
  | ^^^^^^^^^^^^^^^ the trait `shipyard::run::system_data::SystemData<'_>` is not implemented for `shipyard::not::Not<shipyard::storage::entity::Entities>`
  |
  = note: required because of the requirements on the impl of `shipyard::run::system_data::SystemData<'sys>` for `(shipyard::not::Not<shipyard::storage::entity::Entities>,)`
