tests/derive/not_entities.rs
use shipyard::prelude::*;

#[system(Test)]
fn run(_: Not<Entities>) {}

fn main() {}
